# Brain-Stroke-Prediction

./: .gitignore  Dockerfile  Group63_MajorProject.ipynb  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
api/: main.py  schemas.py
app/: streamlit_app.py
configs/: data.yaml  model.yaml  training.yaml
notebooks/: 01_eda_and_story.ipynb  02_modeling_and_results.ipynb
scripts/: train.py
src/stroke_risk/: __init__.py
src/stroke_risk/data/: __init__.py  loader.py  preprocessing.py
src/stroke_risk/explainability/: __init__.py  shap_analysis.py
src/stroke_risk/features/: __init__.py  engineering.py
src/stroke_risk/models/: __init__.py  evaluate.py  optimize.py  stacking.py  train.py
src/stroke_risk/utils/: __init__.py  config.py
